FEAT: Add the /me endpoint to allow to fetch user's informations
