# src/documentation/api.yaml
@@ -67,6 +67,36 @@ paths:
         500:
           $ref: "#/responses/500"
 
+  /me:
+    get:
+      summary: "Get the connected user informations"
+      tags:
+        - auth
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "object"
+            properties:
+              id:
+                type: "string"
+                example: 1
+              email:
+                type: "string"
+                example: "example@mail.com"
+              created_at:
+                type: "string"
+                example: "2020-08-30T13:38:36.383Z"
+              updated_at:
+                type: "string"
+                example: "2020-08-30T13:38:36.383Z"
+        401:
+          $ref: "#/responses/401"
+        404:
+          $ref: "#/responses/404"
+        500:
+          $ref: "#/responses/500"
+
   /lists:
     get:
       summary: "Fetch all the connected user lists"
@@ -267,6 +297,10 @@ responses:
       $ref: "#/definitions/Error"
   401:
     description: Unauthorized
+    schema:
+      $ref: "#/definitions/Error"
+  404:
+    description: Not Found
     schema:
       $ref: "#/definitions/Error"
   422:
